--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,4 +1,4 @@
 contact_links:
     - name: ❓ Questions and Help 🤔
-      url: https://discord.gg/tbd (/add your discord channel if applicable)
+      url: https://discord.com/channels/937858703112155166/969272658501976117
       about: This issue tracker is not for support questions. Please refer to the community for more help. 
