--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "license": "Apache-2.0",
   "dependencies": {
     "fs-extra": "^11.2.0",
-    "minimist": "^1.2.8"
+    "minimist": "^1.2.8",
+    "prompts": "^2.4.2"
   },
   "type": "module"
 }
