--- a/template-vanilla-vite-ts/package.json
+++ b/template-vanilla-vite-ts/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "template-vanilla",
+  "name": "template-vanilla-vite-ts",
   "private": true,
   "version": "0.0.0",
   "type": "module",
