--- a/template-vanilla-vite-ts/tsconfig.json
+++ b/template-vanilla-vite-ts/tsconfig.json
@@ -19,5 +19,5 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src", "web5-utils.ts"]
+  "include": ["src", "web5-utils.ts", "index.ts"]
 }
